# strawberry-auth

./: README.md  env.example  main.py  pyproject.toml  requirements.txt
src/application/use_cases/: user_use_cases.py
src/domain/auth/: permissions.py
src/domain/entities/: access_token_result.py  auth_login_response.py  session.py  token_pair.py  user.py
src/domain/repositories/: user_repository.py
src/domain/services/: token_service.py
src/infrastructure/: container.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: models.py  session.py
src/infrastructure/database/repositories/: user_repository.py
src/presentation/graphql/: context.py  schema.py
src/presentation/graphql/user/: input.py  resolver.py  schema.py  type.py
