[project]
name = "strawberry-auth"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Fontella",email = "yurifc4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "strawberry-graphql[debug-server] (>=0.281.0,<0.282.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.11"
pre-commit = "^4.3.0"
poetry-core = "^2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
